--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,5 +1,12 @@
 body{
     height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://res.cloudinary.com/du43x2mnv/image/upload/v1715935210/YelpCamp/photo-1483381719261-6620dfa2d28a_vgljuj.jpg");
+    /* avoid background repeat */
+    background-size: cover;
+    background-position: center;
+    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
 .cover-container{
@@ -12,3 +19,169 @@ body{
     align-items: center;
     width: 100%;
 }
+
+.nav-link {
+    display: inline-block;
+    position:relative;
+    padding: 0.25rem 0;
+    font-weight: 700;
+    color: rgba(255, 255, 255, 0.5);
+    margin-left: 1rem;
+    border-bottom: 0.25rem solid transparent;
+}
+
+.nav-link:hover {
+    color: whitesmoke;
+}
+.nav-link.active {
+    color: white;
+    border-bottom-color: white;
+}
+
+.btn-secondary, .btn-secondary:hover {
+  color: #333;
+  text-shadow: none;
+}
+
+/* hovering navbar */
+*,::before,::after{
+    box-sizing:border-box;
+    margin:0;
+    padding: 0;
+  }
+
+.nav-link::after{
+    content: "";
+  /* must input position absolute   */
+    position: absolute;
+    color: white;
+    width: 100%;
+    height: 2px;
+  /*  position it 0px from the left, 0px from the bottom  */
+    left: 0px;
+    bottom: 0px;
+  }
+
+  .nav-link.one::after{
+    transform: scaleX(0);
+    background-color: #fff;
+    transition: transform 1s ease-out;
+  }
+
+  .nav-link.two::after{
+    transform: scaleX(0);
+    background-color: #fff;
+    transform-origin: bottom right;
+    transition: transform 1s ease-out;
+  }
+  
+  .nav-link.three::after{
+    transform: scaleX(0);
+    background-color: #fff;
+    transform-origin: bottom left;
+    transition: transform 1s ease-out;
+  }
+
+  .nav-link:hover::after{
+    transform: scaleX(1);
+  }
+
+/* view campground button */
+.custom-btn {
+    width: 230px;
+    height: 40px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+     7px 7px 20px 0px rgba(0,0,0,.1),
+     4px 4px 5px 0px rgba(0,0,0,.1);
+    outline: none;
+  }
+
+/* 6 */
+.btn-6 {
+    background: rgb(247,150,192);
+    background:  linear-gradient(315deg, #89d8d3 0%, #708985 74%);
+    line-height: 42px;
+    padding: 0;
+    border: none;
+  }
+  .btn-6 span {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .btn-6:before,
+  .btn-6:after {
+    position: absolute;
+    content: "";
+    height: 0%;
+    width: 1px;
+   box-shadow:
+     -1px -1px 20px 0px rgba(255,255,255,1),
+     -4px -4px 5px 0px rgba(255,255,255,1),
+     7px 7px 20px 0px rgba(0,0,0,.4),
+     4px 4px 5px 0px rgba(0,0,0,.3);
+  }
+  .btn-6:before {
+    right: 0;
+    top: 0;
+    transition: all 500ms ease;
+  }
+  .btn-6:after {
+    left: 0;
+    bottom: 0;
+    transition: all 500ms ease;
+  }
+  .btn-6:hover{
+    background: transparent;
+    color: #76aef1;
+    box-shadow: none;
+  }
+  .btn-6:hover:before {
+    transition: all 500ms ease;
+    height: 100%;
+  }
+  .btn-6:hover:after {
+    transition: all 500ms ease;
+    height: 100%;
+  }
+  .btn-6 span:before,
+  .btn-6 span:after {
+    position: absolute;
+    content: "";
+    box-shadow:
+     -1px -1px 20px 0px rgba(255,255,255,1),
+     -4px -4px 5px 0px rgba(255,255,255,1),
+     7px 7px 20px 0px rgba(0,0,0,.4),
+     4px 4px 5px 0px rgba(0,0,0,.3);
+  }
+  .btn-6 span:before {
+    left: 0;
+    top: 0;
+    width: 0%;
+    height: .5px;
+    transition: all 500ms ease;
+  }
+  .btn-6 span:after {
+    right: 0;
+    bottom: 0;
+    width: 0%;
+    height: .5px;
+    transition: all 500ms ease;
+  }
+  .btn-6 span:hover:before {
+    width: 100%;
+  }
+  .btn-6 span:hover:after {
+    width: 100%;
+  }
