--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -46,7 +46,7 @@
         
     </div>
     <div class="col-6">
-       <div id="map" style="width: 400px; height:300px;"></div>
+       <div id="map" style="width: 100%; height:300px;"></div>
        <% if(currentUser){ %>
         <h2>Leave a review</h2>
         <form action="/campgrounds/<%=campgrounds._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
