--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,27 +11,27 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div class="header-container">
-                <h3 class="float-md-left mb-0">Campground Web App</h3>
+                <h3 class="float-md-left mb-0">BerrCamp</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
+                    <a class="nav-link one" href="/campgrounds">Campgrounds</a>
                     <% if(!currentUser){ %>
-                    <a class="nav-link" href="/login">Login</a>
-                    <a class="nav-link" href="/register">Register</a>
+                    <a class="nav-link two" href="/login">Login</a>
+                    <a class="nav-link three" href="/register">Register</a>
                     <% }else{ %>
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link three" href="/logout">Logout</a>
                     <% } %>
                 </nav>
             </div>
         </header>
         <main class="px-3">
-            <h1>Campground Web App</h1>
+            <h1>BerrCamp</h1>
             <p class="lead"> Welcome to Campground Web App! <br> Jump right in and explore our many campgrounds. <br>
                 Feel free to share some of your own and comment on others!</p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold text-white bg-white">View Campgrounds</a>
+            <a href="/campgrounds" class="btn btn-lg btn-secondary fw-bold text-black bg-white btn-6 custom-btn"><span>View Campgrounds</span></a>
         </main>
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2024 Campground Web App</p>
+            <p>&copy; 2024 BerrCamp</p>
         </footer>
     </div>
 
