--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <!-- py = padding for y-axis = padding for top and bottom -->
 <footer class="footer bg-dark py-4 mt-auto"> 
     <div class="container">
-        <span class="text-muted"> &copy; YelpCamp 2023</span>
+        <span class="text-muted"> &copy; 2024 BerrCamp</span>
     </div>
 </footer>
