--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate') %>
-<div id="map" style="width:100%; height: 450px"></div>
+<div id="cluster-map"></div>
 
 <h1>All Campgrounds</h1>
 <div><a href="/campgrounds/new">Add Campground</a></div>
@@ -39,3 +39,6 @@ available columns in the grid system. -->
     const campgrounds = {features: <%- JSON.stringify(campgrounds) %> }
 </script>
 <script src="/javascripts/clusterMap.js"></script>
+<!-- Load the `mapbox-gl-geocoder` plugin.map searchbar -->
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
