--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/stylesheets/home.css">
     <title>Campground Web App</title>
 </head>
-<body class="d-flex text-center text-white bg-dark">
+<body crossorigin="anonymous" class="d-flex text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div class="header-container">
